--- a/front end/index.html
+++ b/front end/index.html
@@ -12,7 +12,8 @@
   <div class = "container">
     <div class = "meal-wrapper">
       <div class = "meal-search">
-        <h2 class = "title">Whats in your fridge?</h2>
+        <h2 class = "title">mAI Fridge</h2>
+        <h3>"A World of Flavors at Home”</h3>
         <blockquote>Real food doesn't have ingredients, real food is ingredients.<br>
           <cite>- Jamie Oliver</cite>
         </blockquote>
